changed index.html and style.css for better landing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
@@ -20,12 +20,54 @@
     -->
 
 <!--Exercise 2-->
-        <div class="n1">Number 1 - I'm a class</div>
+<!-- <div class="n1">Number 1 - I'm a class</div>
         <div id="n2">Number 2 - I'm an ID</div>
         <div class="n3" style="font-size: 24px;">Number 3 - I'm a class, but cooler</div>
         <div id="n4">Number 4 - I'm another ID</div>
         <div class="n5">Number 5 - I'm a class</div>
 
+-->  
+<!--margin padding
+    <div class="div1">DIV ONE</div>
+    <div class="div2">DIV TWO</div>
+    <div class="div3">DIV THREE</div>
+
+    <div id="main-container"><div id="div1"><h1>I'm a card</h1></div>
+        <div class="p1" ><h1>I'm content inside me...Lorem ipsum blah blah blah.</br>
+        Here's stuff you need to read.</h1></div>
+        <div class="p2"><h1>and a</h1><button class="button">BIG BUTTON</button></div>
+    </div>
+-->
+
+<!--let's learn Flexbox-->
+
+<div class="flex-container">
+    <div class="one"></div>
+    <div class="two"></div>
+    <div class="three"></div>
+  
+  </div><br><br>   
+  <div class="container">
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+    
+  </div><br><br>
+
+  <div class="container2">
+    <div class="Home">Home</div>
+    <div class="Search">Search</div>
+    <div class="Logout">Logout</div>
+  
+</div><br><br>
+<!--additional resource-->
+  <div class='menu-container'>
+    <div class='menu'>
+      <div class='date'>Aug 14, 2016</div>
+      <div class='signup'>Sign Up</div>
+      <div class='login'>Login</div>
+    </div>
+  </div>
 
     </body>
 
